<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WorldClockWidgetActivity!</string>
    <string name="app_name">World Clock Widget</string>
	<string name="search">Search</string>
	
	<string name="app_label">World Clock</string>
	<string name="search_hint">Search Cities</string>
	
	<string name="menu_settings">Settings</string>
	
	<string name="show_second_ticker">show_second_ticker</string>
	<string name="time_display_preferences">Time Display Preferences</string>
	<string name="display_second_ticker">Display the second ticker</string>
	<string name="display_seconds">Display Seconds</string>
	<string name="appwidget_prefix_default">widget_</string>
	<string name="use_24hour_clock">Use 24 hour clock</string>
	
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="clock_settings">Clock Settings</string>
	<string name="select_city_desc">Select City/Timezone to display</string>
	<string name="city_timezone">City / Timezone</string>
	<string name="select_city">Click Here to Select City</string>
	
	<string name="loading">Loading&#8230;</string>
	
	<string name="medium_widget_name">WorldClock Two Cities</string>
	<string name="small_widget_name">WorldClock One City</string>
	

	    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>    
    
    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
	
</resources>
