<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/time_display_preferences" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/show_second_ticker"
            android:summary="@string/display_second_ticker"
            android:title="@string/display_seconds" />

    </PreferenceCategory>
    <!-- 
    <PreferenceCategory
        android:title="General Settings" >
        <EditTextPreference
            android:defaultValue="Default welcome message"
            android:dialogMessage="Provide a message"
            android:dialogTitle="Welcome Message"
            android:key="welcome_message"
            android:summary="Define the Welcome message to be shown"
            android:title="Welcome Message" />
    </PreferenceCategory>
 -->
</PreferenceScreen>
