<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
<!-- Select City Header -->
    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/separator"
        android:layout_margin="5dp"
        android:text="@string/city_timezone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#757678"
        android:textColor="#f5c227" />
    
<!-- City/Timezone -->
    <TextView
        android:id="@+id/city_name1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:longClickable="false"
        android:paddingBottom="1dip"
        android:paddingTop="1dip"
        android:text="@string/select_city"
        
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city_name_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:clickable="false"
        android:gravity="center"
        android:linksClickable="false"
        android:longClickable="false"
        android:paddingBottom="1dip"
        android:paddingTop="1dip"
        android:text="@string/select_city_desc"
        android:textColor="#808080"
        android:textSize="13sp" />
    
    
        <TextView
        android:id="@+id/city_name2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        
        android:longClickable="false"
        android:padding="10dp"
        android:text="@string/select_city"
        
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city_name_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:clickable="false"
        android:gravity="center"
        android:linksClickable="false"
        android:longClickable="false"
        android:paddingBottom="1dip"
        android:paddingTop="1dip"
        android:text="@string/select_city_desc"
        android:textColor="#808080"
        android:textSize="13sp" />
        
<!-- Clock Configure Header -->
    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/separator"
        android:layout_margin="5dp"
        android:text="@string/clock_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#757678"
        android:textColor="#f5c227" />

    <CheckBox
        android:id="@+id/use_24hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_24hour_clock" />
<!--
    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select background transparency"
        android:layout_margin="5dp" />
 
    <SeekBar
        android:id="@+id/seekBar_transparency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="5dp"/>
 -->
 
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="Background Color"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/previewImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:contentDescription="background"
            android:gravity="center_vertical"
            android:src="@drawable/background" />
    </RelativeLayout>
    
        <!-- clock text color -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="Clock Text Color"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/previewImgText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:contentDescription="background"
            android:gravity="center_vertical"
            android:src="@android:color/background_light" />
    </RelativeLayout> 
     
        <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

       <TextView
           style="@android:style/TextAppearance.Small"
           android:layout_width="fill_parent"
           android:layout_height="match_parent"
           android:layout_margin="4dip"
           android:layout_weight=".5"
           android:gravity="left"
           android:text="Font"
           android:textSize="17sp" />

        <TextView
        android:id="@+id/fontType"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight=".5"
        android:layout_gravity="center_vertical"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:text="Default" />
    
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/save" />

    </LinearLayout>
    
</LinearLayout>